...
            Text("ODYSSEY", fontSize = 22.sp, fontWeight = FontWeight.Bold)
            Text("Let's Travel", fontSize = 14.sp, color = Color.Gray)
        }
        Row {
            if (!hideSearch) {
                IconButton(onClick = onSearchClick,
                    modifier = Modifier.testTag("search_icon")) {
                    Icon(
                        painter = painterResource(id = R.drawable.baseline_search_24),
                        contentDescription = "Search"
                    )
                }
            }
...
